tests/baselines/reference/for-of37.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of37.ts(2,15): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of37.ts (1 errors) ====
    var map = new Map([["", true]]);
    for (var v of map) {
                  ~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        v;
    }